Update text content in index.htmlmmmm

--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,7 @@
         // chữ của thư bạn muốn gửi
         let indexTextContent = 0;
         let textLetterContent = document.querySelector('.contentLetter');
-        const textLetterP = "Hôm nay là ngày 20/10. Tớ chúc hà thật hạnh phúccc, yêu bản thân hơn, và đỗ vào trường sân khấu điện ảnh nhé. Khi nào ra hn tớ dẫn cậuu đi chơi bù nhaaaaa.";
+        const textLetterP = "Hôm qua là ngày 20/10 =)). Tớ chúc hà thật hạnh phúccc, yêu bản thân hơn, và đỗ vào trường sân khấu điện ảnh nhé. Khi nào ra hn tớ dẫn cậuu đi chơi bù nhaaaaa.";
         let timoutTextLetterContent;
         function textCharLetterContent() {
             if (indexTextContent < textLetterP.length) {
